# mppt

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  cookiecutter.json  index.html  mkdocs.yml  mppt.cast  pyproject.toml  references.bib
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
asset/: presentation.md
changelog/: index.html
doc/: index.html
docs/: CHANGELOG.md  index.md
docs/doc/: index.md
docs/linter/: index.md
docs/miscellaneous/: index.md
docs/overrides/: main.html
docs/package/: compare.md  index.md
docs/task/: index.md
docs/test/: index.md
hooks/: post_gen_project.py
linter/: index.html
miscellaneous/: index.html
mppt/: hello.py  sort.py
package/: index.html
package/compare/: index.html
presentation/: mppt-practice.md
search/: search_index.json
task/: index.html
test/: index.html
tests/: test_hello.py  test_sort.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: build_docs.yaml  test.yaml
{{cookiecutter.package_name}}/docs/: index.md
{{cookiecutter.package_name}}/tests/: test_hello.py  test_sort.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  hello.py  sort.py
