[tool.poetry]
name = "mppt"
version = "0.2.0"
description = "Python Package Template"
authors = ["Xiangzhuang Shen <datahonor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-bibtex = "^2.11.0"
mkdocstrings = "^0.24.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.4.14"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
hypothesis = "^6.91.0"
pytest-sugar = "^0.9.7"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.11.0"
mypy = "^1.7.1"


[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
